feat: add post tramites endpoint to specs
